<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/_16"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/title"
            style="@style/AppTheme.Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_marginBottom="@dimen/_16"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Protective Face Shields" />

        <TextView
            android:id="@+id/description"
            style="@style/AppTheme.Body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/_16"
            android:textSize="16sp"
            tools:text="PPE is needed immediately to protect the caregivers who are risking their own health to care for patients in the most need" />

        <LinearLayout
            android:id="@+id/quantity_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8"
                android:text="@string/need" />

            <TextView
                android:id="@+id/quantity"
                style="@style/AppTheme.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark"
                tools:text="1000" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/commited_quantity_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantity_holder"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/_16"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/AppTheme.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16"
                android:text="@string/my_capability" />

            <ImageView
                android:id="@+id/minus"
                android:layout_width="@dimen/_16"
                android:layout_height="@dimen/_16"
                android:layout_marginEnd="@dimen/_16"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/minus" />

            <EditText
                style="@style/AppTheme.Body"
                android:id="@+id/commited_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_16"
                android:gravity="center"
                android:inputType="number"
                android:text="0" />

            <ImageView
                android:id="@+id/plus"
                android:layout_width="@dimen/_16"
                android:layout_height="@dimen/_16"
                android:layout_marginEnd="@dimen/_16"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/plus" />
        </LinearLayout>

        <TextView
            android:id="@+id/location"
            style="@style/AppTheme.Subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/commited_quantity_holder"
            android:layout_marginBottom="@dimen/_16"
            android:drawableStart="@drawable/marker"
            tools:text="Whitechapel Rd, Whitechapel, London E1 1FR, United Kingdom" />

        <ImageView
            android:id="@+id/map_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location"
            android:layout_alignParentStart="true"
            android:scaleType="centerCrop" />


        <Button
            android:id="@+id/ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/map_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_16"
            android:background="@drawable/button_round_corners"
            android:padding="@dimen/_16"
            android:text="@string/help"
            android:textColor="@color/white" />
    </RelativeLayout>
</ScrollView>